# Dental_001

./: .ci_trigger  .dockerignore  .gitattributes  .gitignore  .ruff.toml  Dockerfile  README.md  best.pt  dataset_mil.py  development_log.txt  export_onnx.py  gemini.md  implementation_plan.md  inference.py  labeling_tool.py  last.pt  memo.txt  model_mil.py  prepare_classification_data.py  pyproject.toml  requirements.txt  setup_env.py  test_mps.py  train.py  train_classifier.py  train_mil.py  train_yolo.py  v2_optimization_plan.md
.github/workflows/: ci.yml  (+1 more)
checkpoints/: best_cvm_v2_768px.pth  best_mil_model.pth  best_model.pth  best_unet_transfer_model_512px.pth
docs/: 250928_2336_memo.txt  ARCHITECTURE.md  CLINICAL_VALIDATION.md  DATA_PRIVACY_GUIDELINES.md  development_log.txt  implementation_plan.md  v2_optimization_plan.md  visual_assets.md
reports_archive/: 260710_0834_Cephalometric_BoneAge_E2E_Validation_Report.md
scratch/: append_log.py
scripts/: analyze_cephalo_image.py  check_sampling.py  evaluate.py  prepare_classification_data.py  prepare_yolo_data.py  setup_env.py  train.py  train_classifier.py  train_classifier_v2.py  train_mil.py  train_yolo.py
src/: cephalometric_analyzer.py  config.py  dataset.py  download_weights.py  model.py  model_mil.py  test_analyzer.py
tests/: test_api.py  test_dataset.py  test_inference.py  test_model.py
tools/: api.py  app.py  debug_dataset_output.py  inference.py
training_log/: 20251001_0013_mil_coral_log.csv  20251001_0047_mil_coral_log.csv  20260208_2003_mil_coral_log.csv  20260209_0039_cvm_classifier_log.csv  (+5 more)
(+22 files in other folders)
